# screen-to-kobo

./: .gitignore  .gitmodules  README.md  how-to-run-manually.md
comm/: README.md  api.rs
comm/mirKobo-host/: Cargo.toml  build.rs  build_rustdesk.sh
comm/mirKobo-host/src/: api.rs  main.rs  screen.rs  server.rs
comm/mirKobo-kobo/: Cargo.toml  deploy.sh
comm/mirKobo-kobo/src/: client.rs  device.rs  main.rs
qt-frontend/: data.cpp  data.h  kobo-screen-mirror-reverse.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
